# cascade

./: .gitignore  flake.nix  pyproject.toml
Demo scripts/: Calibrated_spike_inference_with_Cascade.ipynb
cascade2p/: cascade.py  checks.py  config.py  utils.py  utils_discrete_spikes.py
