
[project]
name = "cascade2p"
version = "1.0"
description = "Calibrated inference of spiking from calcium ΔF/F data using deep networks"
readme = "README.md"
authors = [ {name = "Peter Rupprecht"} ]
requires-python = ">=3.13"
dependencies = [
    "h5py>=3.15.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pip>=25.3",
    "ruamel-yaml>=0.19.1",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.20.0",
    "tf-keras>=2.20.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
