
[project]
name = "cascade2p"
version = "1.0"
description = "Calibrated inference of spiking from calcium ΔF/F data using deep networks"
readme = "README.md"
authors = [ {name = "Peter Rupprecht"} ]
requires-python = ">=3.10"
dependencies = [
    "h5py>=3.12",
    "jupyter>=1.0",
    "matplotlib>=3.8",
    "numpy>=2.2",
    "pip>=25.0",
    "ruamel-yaml>=0.18",
    "scipy>=1.15",
    "seaborn>=0.11",
    "tensorflow>=2.16",
    "tf-keras>=2.16",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
